objects/WSL_Participants__c.object
<CustomObject>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Competency__c</fullName>
        <label>Lab Competency</label>
        <picklist>
            <picklistValues>
                <fullName>Sales strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client knowledge, insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision process knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal construct, positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering, delivery knowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pursuit_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pursuit Template</label>
        <referenceTo>Pursuit_Template__c</referenceTo>
        <relationshipLabel>WSL Participants</relationshipLabel>
        <relationshipName>WSL_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WSL Participants</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WSL Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>